- The plus/minus icon on the Matrix discrete scale button prevents the action from happening. - Add the Indizio version in the browser. - The gene IDs displayed in the Matrix view should reflect those visible in the Network.

--- a/indizio/assets/global.css
+++ b/indizio/assets/global.css
@@ -18,10 +18,17 @@ node {
     content: data(label)
 }
 
+/*
+Without this, icons on the buttons will stop hyperlinks from working
+on non-chromium browsers
+*/
+.fas {
+    z-index: 1;
+}
 
 /*
 Additional CSS added below
- */
+*/
 
 .container-main {
     padding: 0;
